--- a/Frontend/src/app/app-customer/view/search-result/search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/search-result.component.html
@@ -7,8 +7,6 @@
   </div>
 </button>
 
-<app-cart></app-cart>
-
 <main class="page-wrapper">
 
   <!--Header-->
@@ -194,3 +192,5 @@
 <!-- Back to top button-->
 <a class="btn-scroll-top" href="#top" data-scroll><span
   class="btn-scroll-top-tooltip text-muted fs-sm me-2">Top</span><i class="btn-scroll-top-icon fi-chevron-up"> </i></a>
+
+<app-shop-cart></app-shop-cart>
