--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-view/item-search-result-view.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-view/item-search-result-view.component.html
@@ -50,14 +50,18 @@
           </div>
         </div>
       </div>
-      <div class="card-footer d-flex mx-3 pt-3 text-nowrap">
+      <div class="card-footer d-flex pt-3 text-nowrap">
 
         <div class="d-flex align-items-center justify-content-between w-100">
           <div class="fs-sm">
             <div class="d-flex d-md-block d-lg-flex align-items-start mb-2">
               <img class="rounded-circle" src="../../../../../assets/img/37.png" width="48" alt="Annette Black">
               <div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3">
-                <h2 class="fs-sm mb-0"><a href="./client-shop-view.html" class="nav-link">Business name</a></h2>
+                <h2 class="fs-sm mb-0">
+                  <a style="padding: 0px;font-weight: bold" class="nav-link">
+                    {{item.businessProfileCategory.businessProfile.businessName}}
+                  </a>
+                </h2>
                 <div class="star-rating">
                   <i class="star-rating-icon fi-star-filled active"></i>
                   <i class="star-rating-icon fi-star-filled active"></i>
@@ -69,9 +73,15 @@
 
             </div>
           </div>
-          <button class="btn btn-icon btn-light-primary btn-sm text-primary shadow-sm rounded-circle"
-                  type="button" data-bs-toggle="tooltip" title="Add to Cart">
-            <i class="fi-cart"></i></button>
+          <div style="display: flex">
+            <button class="btn btn-icon btn-light-primary btn-sm text-primary shadow-sm rounded-circle"
+                    type="button" data-bs-toggle="tooltip" title="Add to Cart" (click)="addToCart(item)">
+              <i class="fi-cart"></i></button>
+            <div *ngIf="item.itemCount>0"
+                 style="padding: 2px 5px 2px 5px;color: #1b945b;margin-top: 5px;margin-left: 8px;font-weight: bold">
+              {{item.itemCount}}
+            </div>
+          </div>
         </div>
       </div>
     </div>
