--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
@@ -44,7 +44,7 @@
     </select>
   </div>
   <hr class="d-none d-sm-block w-100 mx-4">
-  <div class="d-none d-sm-flex align-items-center flex-shrink-0 text-muted"><i class="fi-check-circle me-2"></i><span
+  <div style="margin-right: 20px" class="d-none d-sm-flex align-items-center flex-shrink-0 text-muted"><i class="fi-check-circle me-2"></i><span
     class="fs-sm mt-n1">{{itemCount>1 ? itemCount+' results':itemCount+' result'}}</span></div>
 </div>
 <!-- Catalog grid-->
