--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-view/item-search-result-view.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-view/item-search-result-view.component.html
@@ -74,11 +74,11 @@
             </div>
           </div>
           <div style="display: flex">
-            <button class="btn btn-icon btn-light-primary btn-sm text-primary shadow-sm rounded-circle"
+            <button style="background-color: #FD5631" class="btn btn-icon btn-light-primary btn-sm text-primary rounded-circle"
                     type="button" data-bs-toggle="tooltip" title="Add to Cart" (click)="addToCart(item)">
-              <i class="fi-cart"></i></button>
+              <i class="fi-cart" style="color: white"></i></button>
             <div *ngIf="item.itemCount>0"
-                 style="padding: 2px 5px 2px 5px;color: #1b945b;margin-top: 5px;margin-left: 8px;font-weight: bold">
+                 style="padding: 2px 5px 2px 5px;color: #1b945b;margin-top: 4px;margin-left: 8px;font-weight: bold">
               {{item.itemCount}}
             </div>
           </div>
