--- a/Frontend/src/app/app-customer/view/search-result/shop-cart/shop-cart.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/shop-cart/shop-cart.component.html
@@ -19,28 +19,6 @@
       </div>
     </div>
     <div class="section-second mb-3">
-      <!--<div class="list-group list-group-horizontal-sm">-->
-      <!--<a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"-->
-      <!--title="Items Count" data-bs-original-title="Items Count" aria-label="Items Count">-->
-      <!--<div class="bg-teal rounded text-center p-2"><i class="fi-list d-block h5 text-light mb-0 mx-center"></i>-->
-      <!--<span class="fs-xs h4 text-light">5</span>-->
-      <!--</div>-->
-      <!--</a>-->
-      <!--<a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"-->
-      <!--title="Total Price" data-bs-original-title="Total Price" aria-label="Total Price">-->
-      <!--<div class="bg-teal rounded text-center p-2">-->
-      <!--<i class="fi-cash d-block h5 text-light mb-0 mx-center"></i><span-->
-      <!--class="fs-xs h4 text-light">LKR 2500</span>-->
-      <!--</div>-->
-      <!--</a>-->
-      <!--<a href="#cart-item-list" data-bs-toggle="collapse" aria-expanded="false" aria-controls="cart-item-list"-->
-      <!--class="list-group-item list-group-item-action text-center">-->
-      <!--<div class="bg-teal rounded text-center p-2">-->
-      <!--<i class="fi-eye-on d-block h5 text-light mb-0 mx-center"></i>-->
-      <!--<span class="fs-xs h4 text-light">view</span>-->
-      <!--</div>-->
-      <!--</a>-->
-      <!--</div>-->
       <div class="row cols-md-4 col-info" style="border-bottom: 1px solid #e9e9e9;padding-bottom: 10px">
         <div class="col-5">
           <div style="background-color: rgba(229,154,3,0.44)">
@@ -104,8 +82,8 @@
             </div>
             <div class="col-1">
               <button
-                class="btnView btn btn-primary btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
-                type="button" data-bs-toggle="collapse" style="background-color: #af7602"
+                class="btnView btn  btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
+                type="button" data-bs-toggle="collapse" style="background-color: #af7602;color: white"
                 aria-expanded="true"
                 href="#cart-item-list-2">
                 <i class="fi-eye-on"></i>
@@ -161,113 +139,20 @@
                     </div>
                     <div class="col-7" style="display: grid;justify-content: center;align-content: center">
                       <div style="display: flex">
-                        <div><i class="fi-minus-square" style="font-size: 35px" (click)="itemCountDec(item)"></i></div>
+                        <div><i class="fi-minus-square" style="font-size: 35px;cursor: pointer" (click)="itemCountDec(item)"></i></div>
                         <div style="padding-left: 30px;padding-right: 30px;font-weight: bold;font-size: 20px;padding-top: 2px">
                           {{item.itemCount}}
                         </div>
-                        <div><i class="fi-plus-square" style="font-size: 35px" (click)="itemCountInc(item)"></i></div>
+                        <div><i class="fi-plus-square" style="font-size: 35px;cursor: pointer" (click)="itemCountInc(item)"></i></div>
                       </div>
                     </div>
                     <!--</div>-->
                   </div>
-                  <!--<a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"-->
-                  <!--title="Quantity" data-bs-original-title="Quantity" aria-label="Quantity">-->
-                  <!--<div class="bg-dark rounded text-center p-2">-->
-                  <!--<i class="fi-archive d-block h5 text-light mb-0 mx-center"></i>-->
-                  <!--<span class="fs-xs h4 text-light">2</span>-->
-                  <!--</div>-->
-                  <!--</a>-->
-                  <!--<a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"-->
-                  <!--title="Discount" data-bs-original-title="Discount" aria-label="Discount">-->
-                  <!--<div class="bg-dark rounded text-center p-2">-->
-                  <!--<i class="fi-precentage d-block h5 text-light mb-0 mx-center"></i>-->
-                  <!--<span class="fs-xs h4 text-light">LKR 20</span>-->
-                  <!--</div>-->
-                  <!--</a>-->
-                  <!--<a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"-->
-                  <!--title="Price" data-bs-original-title="Price" aria-label="Price">-->
-                  <!--<div class="bg-dark rounded text-center p-2">-->
-                  <!--<i class="fi-cash d-block h5 text-light mb-0 mx-center"></i>-->
-                  <!--<span class="fs-xs h4 text-light">LKR 500</span>-->
-                  <!--</div>-->
-                  <!--</a>-->
+
                 </div>
                 <!--</div>-->
 
               </div>
-              <!--Order detail card 2-->
-              <!--<div class="order-detail-card mb-3" style="">-->
-              <!--<div class="d-flex align-items-center justify-content-between pb-1">-->
-              <!--<div class="d-flex justify-content-between align-items-start">-->
-              <!--<h3 class="h6 mb-2 fs-base">-->
-              <!--<a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#item-viewer"-->
-              <!--style="font-weight: bold;padding-left: 10px">-->
-              <!--Package Name-->
-              <!--</a>-->
-              <!--</h3>-->
-              <!--<span class="badge rounded-pill bg-success" style="margin-top: 5px"> Package </span>-->
-              <!--</div>-->
-              <!--<button type="button" class="btn btn-outline-primary btn-icon btn-xxs"-->
-              <!--style="margin-top: 3px;border-width: 2px">-->
-              <!--<i class="fi-x" style="font-weight: bold"></i>-->
-              <!--</button>-->
-              <!--</div>-->
-              <!--<div class="order-detail-card-ss mb-3">-->
-              <!--&lt;!&ndash;<div class="list-group list-group-horizontal-sm">&ndash;&gt;-->
-              <!--<div class="row cols-md-4" style="padding-top: 10px">-->
-              <!--&lt;!&ndash;<div class="col-12">&ndash;&gt;-->
-              <!--<div class="col-5">-->
-              <!--<div class="row col-info">-->
-              <!--<div class="col-12">-->
-              <!--<div style="background-color: rgba(229,101,2,0.44)">-->
-              <!--<div class="mb-2 fs-sm text-dark fw-bold">Price</div>-->
-              <!--<div class="fs-sm fw-bold" style="color: #b96802">{{'LKR '+4}}</div>-->
-              <!--</div>-->
-              <!--</div>-->
-              <!--<div class="col-12" style="margin-top: 10px">-->
-              <!--<div style="background-color: rgba(229,66,5,0.44)">-->
-              <!--<div class="mb-2 fs-sm text-dark fw-bold">Discount</div>-->
-              <!--<div class="fs-sm fw-bold" style="color: #b94701">-->
-              <!--3-->
-              <!--</div>-->
-              <!--</div>-->
-              <!--</div>-->
-              <!--</div>-->
-              <!--</div>-->
-              <!--<div class="col-7" style="display: grid;justify-content: center;align-content: center">-->
-              <!--<div style="display: flex">-->
-              <!--<div><i class="fi-minus-square" style="font-size: 40px"></i></div>-->
-              <!--<div style="padding-left: 30px;padding-right: 30px;font-weight: bold;font-size: 25px">2</div>-->
-              <!--<div><i class="fi-plus-square" style="font-size: 40px"></i></div>-->
-              <!--</div>-->
-              <!--</div>-->
-              <!--&lt;!&ndash;</div>&ndash;&gt;-->
-              <!--</div>-->
-              <!--&lt;!&ndash;<a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"&ndash;&gt;-->
-              <!--&lt;!&ndash;title="Quantity" data-bs-original-title="Quantity" aria-label="Quantity">&ndash;&gt;-->
-              <!--&lt;!&ndash;<div class="bg-dark rounded text-center p-2">&ndash;&gt;-->
-              <!--&lt;!&ndash;<i class="fi-archive d-block h5 text-light mb-0 mx-center"></i>&ndash;&gt;-->
-              <!--&lt;!&ndash;<span class="fs-xs h4 text-light">2</span>&ndash;&gt;-->
-              <!--&lt;!&ndash;</div>&ndash;&gt;-->
-              <!--&lt;!&ndash;</a>&ndash;&gt;-->
-              <!--&lt;!&ndash;<a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"&ndash;&gt;-->
-              <!--&lt;!&ndash;title="Discount" data-bs-original-title="Discount" aria-label="Discount">&ndash;&gt;-->
-              <!--&lt;!&ndash;<div class="bg-dark rounded text-center p-2">&ndash;&gt;-->
-              <!--&lt;!&ndash;<i class="fi-precentage d-block h5 text-light mb-0 mx-center"></i>&ndash;&gt;-->
-              <!--&lt;!&ndash;<span class="fs-xs h4 text-light">LKR 20</span>&ndash;&gt;-->
-              <!--&lt;!&ndash;</div>&ndash;&gt;-->
-              <!--&lt;!&ndash;</a>&ndash;&gt;-->
-              <!--&lt;!&ndash;<a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"&ndash;&gt;-->
-              <!--&lt;!&ndash;title="Price" data-bs-original-title="Price" aria-label="Price">&ndash;&gt;-->
-              <!--&lt;!&ndash;<div class="bg-dark rounded text-center p-2">&ndash;&gt;-->
-              <!--&lt;!&ndash;<i class="fi-cash d-block h5 text-light mb-0 mx-center"></i>&ndash;&gt;-->
-              <!--&lt;!&ndash;<span class="fs-xs h4 text-light">LKR 500</span>&ndash;&gt;-->
-              <!--&lt;!&ndash;</div>&ndash;&gt;-->
-              <!--&lt;!&ndash;</a>&ndash;&gt;-->
-              <!--</div>-->
-              <!--&lt;!&ndash;</div>&ndash;&gt;-->
-
-              <!--</div>-->
 
             </div>
           </div>
