--- a/Frontend/src/app/app-customer/view/search-result/shop-cart/shop-cart.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/shop-cart/shop-cart.component.html
@@ -45,7 +45,8 @@
   </div>
   <div class="offcanvas-body">
     <div class="collapse mb-3 show" id="cart-item-list">
-      <div class="card card-body mb-2" style="padding-bottom: 5px;border-color: #c1c1c1" *ngFor="let shop of shopCart">
+      <div class="card card-body mb-2" style="padding-bottom: 5px;border-color: #c1c1c1"
+           *ngFor="let shop of shopCart;let i=index">
         <!--order for shop-->
         <blockquote class="">
           <div class="d-flex justify-content-between mb-2">
@@ -60,9 +61,9 @@
             </div>
             <div>
               <div class="text-muted fs-sm mt-1"><a
-                class="btn btn-icon btn-danger btn-sm shadow-sm rounded-circle" href="#"
+                class="btn btn-icon btn-danger btn-sm shadow-sm rounded-circle" 
                 data-bs-toggle="tooltip" title="Remove order." data-bs-original-title="Remove order."
-                aria-label="Remove order.">
+                aria-label="Remove order." (click)="removeItem(i,'shop')">
                 <i class="fi-trash"></i></a></div>
             </div>
           </div>
@@ -96,7 +97,7 @@
               <div class="order-detail-card"
                    style="border-top: 1px solid #c1c1c1;padding: 10px 0px 5px 0px;margin-bottom: 0px"
                    [ngStyle]="{'border-top-width':first?'1px':'1px'}"
-                   *ngFor="let item of shop.items;let first = first;let last = last">
+                   *ngFor="let item of shop.items;let first = first;let last = last;let j=index">
                 <div class="d-flex align-items-center justify-content-between pb-1">
                   <div class="d-flex justify-content-between align-items-start">
                     <!--<button type="button" class="btn btn-outline-primary btn-icon btn-xxs"-->
@@ -112,7 +113,7 @@
                     <span class="badge rounded-pill bg-info" style="margin-top: 5px"> Item </span>
                   </div>
                   <button type="button" class="btn btn-outline-primary btn-icon btn-xxs"
-                          style="margin-top: 3px;border-width: 2px">
+                          style="margin-top: 3px;border-width: 2px;cursor: pointer" (click)="removeItem(i,'item',j)">
                     <i class="fi-x" style="font-weight: bold"></i>
                   </button>
                   <!--<span class="badge rounded-pill bg-info"> Item </span>-->
@@ -139,11 +140,14 @@
                     </div>
                     <div class="col-7" style="display: grid;justify-content: center;align-content: center">
                       <div style="display: flex">
-                        <div><i class="fi-minus-square" style="font-size: 35px;cursor: pointer" (click)="itemCountDec(item)"></i></div>
-                        <div style="padding-left: 30px;padding-right: 30px;font-weight: bold;font-size: 20px;padding-top: 2px">
+                        <div><i class="fi-minus-square" style="font-size: 35px;cursor: pointer"
+                                (click)="itemCountDec(item)"></i></div>
+                        <div
+                          style="padding-left: 30px;padding-right: 30px;font-weight: bold;font-size: 20px;padding-top: 2px">
                           {{item.itemCount}}
                         </div>
-                        <div><i class="fi-plus-square" style="font-size: 35px;cursor: pointer" (click)="itemCountInc(item)"></i></div>
+                        <div><i class="fi-plus-square" style="font-size: 35px;cursor: pointer"
+                                (click)="itemCountInc(item)"></i></div>
                       </div>
                     </div>
                     <!--</div>-->
