--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-detail-view/item-search-result-detail-view.component.css
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-detail-view/item-search-result-detail-view.component.css
@@ -1,16 +1,17 @@
 .col-info > div > div {
   border-radius: 10px;
-  padding: 8px 15px 0px 15px;
-  display: flex
+  padding: 8px 15px 8px 15px;
+  /*border: 3px solid;*/
+  /*display: flex*/
 }
 
 .col-info > div > div > div {
-  margin-left: 40px;
+  /*margin-left: 40px;*/
   text-align: center;
-  line-height: 2;
+  /*line-height: 2;*/
   width: 100%
 }
 
 .col-info > div > div > span {
-  line-height: 2;
+  /*line-height: 2;*/
 }
