--- a/Frontend/src/app/app-customer/view/search-result/shop-cart/shop-cart.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/shop-cart/shop-cart.component.html
@@ -7,7 +7,7 @@
             <i class="fi-cart"></i></a>
           <!-- <img class="rounded-circle me-1" src="../../../../assets/img/37.png" width="48" alt="Avatar"> -->
           <div class="ps-2">
-            <h6 class="fs-base mb-0">OrderId</h6>
+            <h6 class="fs-base mb-0">{{itemOrder.orderId===''?'OrderId':itemOrder.orderId}}</h6>
             <div class="text-muted fw-normal fs-sm">Sent to {{shopCart.length}} {{shopCart.length>1?'Shops':'Shop'}}
             </div>
           </div>
@@ -23,7 +23,7 @@
         <div class="col-5">
           <div style="background-color: rgba(229,154,3,0.44)">
             <div class="mb-2 fs-sm text-dark fw-bold">Quantity</div>
-            <div class="fs-sm fw-bold" style="color: #b97800">2</div>
+            <div class="fs-sm fw-bold" style="color: #b97800">{{totalItemCount}}</div>
           </div>
         </div>
         <!--<div class="col">-->
@@ -37,7 +37,7 @@
         <div class="col-7">
           <div style="background-color: rgba(229,101,2,0.44)">
             <div class="mb-2 fs-sm text-dark fw-bold">Total Price</div>
-            <div class="fs-sm fw-bold" style="color: #b96802">{{'LKR '+4}}</div>
+            <div class="fs-sm fw-bold" style="color: #b96802">{{'LKR ' + totalPrice}}</div>
           </div>
         </div>
       </div>
@@ -78,7 +78,7 @@
             <div class="col-6">
               <div style="background-color: rgba(229,101,2,0.44)">
                 <div class="mb-2 fs-sm text-dark fw-bold">Total Price</div>
-                <div class="fs-sm fw-bold" style="color: #b96802">{{'LKR '+4}}</div>
+                <div class="fs-sm fw-bold" style="color: #b96802">{{'LKR ' + shop.totalPrice}}</div>
               </div>
             </div>
             <div class="col-1">
@@ -124,36 +124,38 @@
                     <!--<div class="col-12">-->
                     <div class="col-5">
                       <!--<div class="row col-info">-->
-                        <!--<div class="col-12">-->
-                          <!--<div style="background-color: rgba(229,101,2,0.44)">-->
-                            <!--<div class="mb-2 fs-sm text-dark fw-bold">Price</div>-->
-                            <!--<div class="fs-sm fw-bold" style="color: #b96802">{{'LKR '+item.itemPrice}}</div>-->
-                          <!--</div>-->
-                        <!--</div>-->
-                        <!--<div class="col-12" style="margin-top: 10px">-->
-                          <!--<div style="background-color: rgba(229,66,5,0.44)">-->
-                            <!--<div class="mb-2 fs-sm text-dark fw-bold">Discount</div>-->
-                            <!--<div class="fs-sm fw-bold" style="color: #b94701">{{item.itemPrice}}</div>-->
-                            <!--<span *ngIf="item.itemDiscountType==='None'">LKR {{item.itemPrice}}</span>-->
-                            <!--<span *ngIf="item.itemDiscountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.itemPrice}}</span>-->
-                            <!--<span *ngIf="item.itemDiscountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(item)}}</span>-->
-                          <!--</div>-->
-                        <!--</div>-->
+                      <!--<div class="col-12">-->
+                      <!--<div style="background-color: rgba(229,101,2,0.44)">-->
+                      <!--<div class="mb-2 fs-sm text-dark fw-bold">Price</div>-->
+                      <!--<div class="fs-sm fw-bold" style="color: #b96802">{{'LKR '+item.itemPrice}}</div>-->
+                      <!--</div>-->
+                      <!--</div>-->
+                      <!--<div class="col-12" style="margin-top: 10px">-->
+                      <!--<div style="background-color: rgba(229,66,5,0.44)">-->
+                      <!--<div class="mb-2 fs-sm text-dark fw-bold">Discount</div>-->
+                      <!--<div class="fs-sm fw-bold" style="color: #b94701">{{item.itemPrice}}</div>-->
+                      <!--<span *ngIf="item.itemDiscountType==='None'">LKR {{item.itemPrice}}</span>-->
+                      <!--<span *ngIf="item.itemDiscountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.itemPrice}}</span>-->
+                      <!--<span *ngIf="item.itemDiscountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(item)}}</span>-->
+                      <!--</div>-->
+                      <!--</div>-->
                       <!--</div>-->
                       <div class="border-top border-light pt-0 mb-2">
                         <div class="fw-bold" style="font-size: 21px;margin-top: 0px;margin-bottom: 15px">
                           <i class="fi-cash mt-n1 me-2 lead align-middle opacity-70" style="font-size: 30px"></i>
-                          <span *ngIf="item.itemDiscountType==='None'">LKR {{item.itemPrice * item.itemCount}}</span>
-                          <span *ngIf="item.itemDiscountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.itemPrice * item.itemCount}}</span>
+                          <span *ngIf="item.itemDiscountType==='None'">LKR {{item.itemPrice * item.orderDetail.quantity}}</span>
+                          <span *ngIf="item.itemDiscountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.itemPrice * item.orderDetail.quantity}}</span>
                           <span *ngIf="item.itemDiscountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(item)}}</span>
                         </div>
                         <div class="row cols-sm-2 row-cols-md-12"
                              style="border-top: 1px solid #eaeaea;border-bottom: 1px solid #eaeaea;margin-top: 0px;margin-bottom: 20px;font-size: 15px">
                           <div class="col" style="padding: 0px">
                             <div style="border-right: 1px solid #d3d3d3">
-                              <p class="mb-1" style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
+                              <p class="mb-1"
+                                 style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
                                 Quantity </p>
-                              <p class="mb-2 fw-bold mx-2" style="text-align: center;color: #f29d00">{{item.itemQty}}</p>
+                              <p class="mb-2 fw-bold mx-2" style="text-align: center;color: #f29d00">
+                                {{item.itemQty}}</p>
                             </div>
                           </div>
                           <div class="col" style="padding: 0px">
@@ -174,7 +176,7 @@
                                 (click)="itemCountDec(shop,item)"></i></div>
                         <div
                           style="padding-left: 30px;padding-right: 30px;font-weight: bold;font-size: 20px;padding-top: 2px">
-                          {{item.itemCount}}
+                          {{item.orderDetail.quantity}}
                         </div>
                         <div><i class="fi-plus-square" style="font-size: 35px;cursor: pointer"
                                 (click)="itemCountInc(shop,item)"></i></div>
@@ -199,7 +201,7 @@
     <button class="btn btn-light-primary btn-sm">
       <i class="fi-trash"></i> Clear Cart
     </button>
-    <button class="btn btn-light-primary btn-sm">
+    <button class="btn btn-light-primary btn-sm" (click)="placeOrder()">
       <i class="fi-check-circle"></i> Place Order
     </button>
   </div>
