--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-package-search-result.component.html
@@ -44,7 +44,8 @@
     </select>
   </div>
   <hr class="d-none d-sm-block w-100 mx-4">
-  <div style="margin-right: 20px" class="d-none d-sm-flex align-items-center flex-shrink-0 text-muted"><i class="fi-check-circle me-2"></i><span
+  <div style="margin-right: 20px" class="d-none d-sm-flex align-items-center flex-shrink-0 text-muted"><i
+    class="fi-check-circle me-2"></i><span
     class="fs-sm mt-n1">{{itemCount>1 ? itemCount+' results':itemCount+' result'}}</span></div>
 </div>
 <!-- Catalog grid-->
@@ -85,7 +86,7 @@
                  [ngStyle]="{'margin-top':i>0 ? '30px':'0px'}">
               <div class="accordion-header" id="">
                 <div class="card bg-position-center border-0 overflow-hidden"
-                     style="height: 350px; background-size: cover;">
+                     style="">
 
                   <div class="tns-carousel-wrapper card-img-top card-img-hover">
                     <span class="img-gradient-overlay"></span>
@@ -103,7 +104,7 @@
                           </div>
                         </a>
                         <div class="btn-group ms-n2 ms-sm-5 mt-3 justify-content-end">
-                          <a class="btn btn-primary px-3">LKR {{itemPackage.price}}</a>
+                          <!--<a class="btn btn-primary px-3">LKR {{itemPackage.price}}</a>-->
                           <button
                             class="btnView btn btn-primary btn-icon border-end-0 border-top-0 border-bottom-0 border-light fs-sm"
                             type="button" data-bs-toggle="collapse" [attr.data-bs-target]="'#ipsr-package' + i"
@@ -115,11 +116,20 @@
                       </div>
                     </div>
 
+                    <!--<div class="content-overlay end-0 top-0 pt-3 pe-3">-->
+                    <!--<button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"-->
+                    <!--data-bs-toggle="tooltip" data-bs-placement="left" title="remove item">-->
+                    <!--<i class="fi-trash" style="font-size: 20px"></i>-->
+                    <!--</button>-->
+                    <!--</div>-->
+                    <div class="position-absolute start-0 top-0 pt-3 ps-3"><span
+                      class="d-table badge bg-primary cursor-point"><h4 class="h6 text-light fs-sm"
+                                                                        style="margin-bottom: 0px;"><i
+                      class="fi-star fs-sm"></i> 4.5 / 5</h4></span></div>
                     <div class="content-overlay end-0 top-0 pt-3 pe-3">
                       <button class="btn btn-icon btn-light btn-xs text-primary rounded-circle" type="button"
-                              data-bs-toggle="tooltip" data-bs-placement="left" title="remove item">
-                        <i class="fi-trash" style="font-size: 20px"></i>
-                      </button>
+                              data-bs-toggle="tooltip" data-bs-placement="left" title="Add to favourite"><i
+                        class="fi-heart"></i></button>
                     </div>
                     <div style="height: 350px; background-size: cover;">
                       <mdb-carousel class="carousel slide carousel-fade" [animation]="'fade'">
@@ -132,7 +142,80 @@
                       </mdb-carousel>
                     </div>
                   </div>
+                  <div class="position-relative" style="margin: 15px 15px 0px 15px">
+                    <!--<h3 class="h6 fs-base" style="margin-bottom: 0px">-->
+                    <!--<a class="nav-link" href="#" data-bs-toggle="offcanvas"-->
+                    <!--data-bs-target="#fi-item-viewer" style="font-weight: bold;padding: 0px">{{itemPackage.name}}</a>-->
+                    <!--</h3>-->
+                    <div class="border-top border-light pt-0 mb-2">
 
+                      <div class="row cols-sm-2 row-cols-md-12">
+                        <div class="col" style="padding: 0px">
+                          <p class="mb-2 fs-sm"
+                             style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">
+                            Discount </p>
+                          <p class="mb-2 fs-sm text-primary fw-bold" style="text-align: center">
+                            {{itemPackage.discountType==='None' ? 'N/A' :
+                            itemPackage.discountType==='Cash' ? ('LKR '+itemPackage.discount) :
+                            itemPackage.discountType==='Percentage' ? (itemPackage.discount + '%') : ''}}
+                          </p>
+                        </div>
+                        <div class="col"
+                             style="padding: 0px;display: grid;justify-content: center;align-content: center">
+                          <div style="border-right: 1px solid #d3d3d3">
+                            <div class="fw-bold"><i class="fi-cash mt-n1 me-2 lead align-middle opacity-70"></i>
+                              <span *ngIf="itemPackage.discountType==='None'">LKR {{itemPackage.price}}</span>
+                              <span *ngIf="itemPackage.discountType!=='None'"
+                                    style="text-decoration: line-through;color: red">LKR {{itemPackage.price}}</span>
+                              <span *ngIf="itemPackage.discountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(itemPackage)}}</span>
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                      <!--<div class="fw-bold"><i class="fi-cash mt-n1 me-2 lead align-middle opacity-70"></i>-->
+                      <!--<span *ngIf="itemPackage.discountType==='None'">LKR {{itemPackage.price}}</span>-->
+                      <!--<span *ngIf="itemPackage.discountType!=='None'" style="text-decoration: line-through;color: red">LKR {{itemPackage.price}}</span>-->
+                      <!--<span *ngIf="itemPackage.discountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(itemPackage)}}</span>-->
+                      <!--</div>-->
+                    </div>
+                  </div>
+                  <div class="card-footer d-flex pt-3 text-nowrap">
+
+                    <div class="d-flex align-items-center justify-content-between w-100">
+                      <div class="fs-sm">
+                        <div class="d-flex d-md-block d-lg-flex align-items-start mb-2">
+                          <img class="rounded-circle" src="../../../../../assets/img/37.png" width="48"
+                               alt="Annette Black">
+                          <div class="pt-md-2 pt-lg-0 ps-3 ps-md-0 ps-lg-3">
+                            <h2 class="fs-sm mb-0">
+                              <a style="padding: 0px;font-weight: bold" class="nav-link">
+                                {{itemPackage.businessProfileCategory.businessProfile.businessName}}
+                              </a>
+                            </h2>
+                            <div class="star-rating">
+                              <i class="star-rating-icon fi-star-filled active"></i>
+                              <i class="star-rating-icon fi-star-filled active"></i>
+                              <i class="star-rating-icon fi-star-filled active"></i>
+                              <i class="star-rating-icon fi-star-filled active"></i>
+                              <i class="star-rating-icon fi-star-filled active"></i>
+                            </div>
+                          </div>
+
+                        </div>
+                      </div>
+                      <div style="display: flex">
+                        <button style="background-color: #06A773"
+                                class="btn btn-icon btn-sm text-primary rounded-circle"
+                                type="button" data-bs-toggle="tooltip" title="Add to Cart"
+                                (click)="addToCart(itemPackage)">
+                          <i class="fi-cart" style="color: white"></i></button>
+                        <div *ngIf="itemPackage.orderDetail.quantity>0"
+                             style="padding: 2px 5px 2px 5px;color: #1b945b;margin-top: 4px;margin-left: 8px;font-weight: bold">
+                          {{itemPackage.orderDetail.quantity}}
+                        </div>
+                      </div>
+                    </div>
+                  </div>
 
                 </div>
 
