--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-detail-view/item-search-result-detail-view.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-detail-view/item-search-result-detail-view.component.html
@@ -2,7 +2,7 @@
 <div class="offcanvas offcanvas-end" id="fi-item-viewer" style="width:50rem;">
   <div class="offcanvas-header d-block border-bottom">
     <div class="d-flex align-items-center justify-content-between">
-      <h2 class="h5 mb-0">{{item.itemTitle}}</h2>
+      <h2 class="h5 mb-0">{{item.name}}</h2>
       <button class="btn-close" type="button" data-bs-dismiss="offcanvas"></button>
     </div>
 
@@ -110,19 +110,19 @@
         <!--<div class="col me-sm-1">-->
         <!--<div class="bg-dark rounded text-center w-100 h-100 p-2 cursor-point">-->
         <!--<i class="fi-dashboard d-block h4 text-light mb-0 mx-center"></i>-->
-        <!--<span class="fs-xs text-light fw-bold">{{item.itemQty}}</span>-->
+        <!--<span class="fs-xs text-light fw-bold">{{item.quantity}}</span>-->
         <!--</div>-->
         <!--</div>-->
         <!--<div class="col me-sm-1">-->
         <!--<div class="bg-dark rounded text-center w-100 h-100 p-2 cursor-point">-->
         <!--<i class="fi-precentage d-block h4 text-light mb-0 mx-center fw-bold"></i>-->
-        <!--<span class="fs-xs text-light fw-bold">{{item.itemDiscount}}</span>-->
+        <!--<span class="fs-xs text-light fw-bold">{{item.discount}}</span>-->
         <!--</div>-->
         <!--</div>-->
         <!--<div class="col">-->
         <!--<div class="bg-dark rounded text-center w-100 h-100 p-2 cursor-point">-->
         <!--<i class="fi-cash d-block h4 text-light mb-0 mx-center"></i>-->
-        <!--<span class="fs-xs text-light fw-bold">LKR {{item.itemPrice}}</span>-->
+        <!--<span class="fs-xs text-light fw-bold">LKR {{item.price}}</span>-->
         <!--</div>-->
         <!--</div>-->
         <!--</div>-->
@@ -130,15 +130,15 @@
           <!--<div class="col">-->
             <!--<div style="background-color: rgba(229,154,3,0.44)">-->
               <!--<div class="mb-2 fs-sm text-dark fw-bold">Quantity </div>-->
-              <!--<div class="fs-sm fw-bold" style="color: #b97800">{{item.itemQty}}</div>-->
+              <!--<div class="fs-sm fw-bold" style="color: #b97800">{{item.quantity}}</div>-->
             <!--</div>-->
           <!--</div>-->
           <!--<div class="col">-->
             <!--<div style="background-color: rgba(229,101,2,0.44)">-->
               <!--<div class="mb-2 fs-sm text-dark fw-bold">Price </div>-->
               <!--<div class="fs-sm fw-bold" style="color: #b96802">-->
-                <!--<div>{{'LKR '+item.itemPrice}}</div>-->
-                <!--<div>{{'LKR '+item.itemPrice}}</div>-->
+                <!--<div>{{'LKR '+item.price}}</div>-->
+                <!--<div>{{'LKR '+item.price}}</div>-->
               <!--</div>-->
             <!--</div>-->
           <!--</div>-->
@@ -146,9 +146,9 @@
             <!--<div style="background-color: rgba(229,66,5,0.44)">-->
               <!--<div class="mb-2 fs-sm text-dark fw-bold">Discount </div>-->
               <!--<div class="fs-sm fw-bold" style="color: #b94701">-->
-                <!--{{item.itemDiscountType==='None' ? 'N/A' :-->
-                <!--item.itemDiscountType==='Cash' ? ('LKR '+item.itemDiscount) :-->
-                <!--item.itemDiscountType==='Percentage' ? (item.itemDiscount + '%') : ''}}-->
+                <!--{{item.discountType==='None' ? 'N/A' :-->
+                <!--item.discountType==='Cash' ? ('LKR '+item.discount) :-->
+                <!--item.discountType==='Percentage' ? (item.discount + '%') : ''}}-->
               <!--</div>-->
             <!--</div>-->
           <!--</div>-->
@@ -156,9 +156,9 @@
         <div class="border-top border-light pt-0 mb-2">
           <div class="fw-bold" style="font-size: 21px;margin-top: 0px;margin-bottom: 15px">
             <i class="fi-cash mt-n1 me-2 lead align-middle opacity-70" style="font-size: 30px"></i>
-            <span *ngIf="item.itemDiscountType==='None'">LKR {{item.itemPrice}}</span>
-            <span *ngIf="item.itemDiscountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.itemPrice}}</span>
-            <span *ngIf="item.itemDiscountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(item)}}</span>
+            <span *ngIf="item.discountType==='None'">LKR {{item.price}}</span>
+            <span *ngIf="item.discountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.price}}</span>
+            <span *ngIf="item.discountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(item)}}</span>
           </div>
           <div class="row cols-sm-2 row-cols-md-12"
                style="border-top: 1px solid #eaeaea;border-bottom: 1px solid #eaeaea;margin-top: 0px;margin-bottom: 20px">
@@ -166,16 +166,16 @@
               <div style="border-right: 1px solid #d3d3d3">
                 <p class="mb-1 fs-sm" style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
                   Quantity </p>
-                <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">{{item.itemQty}}</p>
+                <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">{{item.quantity}}</p>
               </div>
             </div>
             <div class="col" style="padding: 0px">
               <p class="mb-2 fs-sm" style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">
                 Discount </p>
               <p class="mb-2 fs-sm text-primary fw-bold" style="text-align: center">
-                {{item.itemDiscountType==='None' ? 'N/A' :
-                item.itemDiscountType==='Cash' ? ('LKR '+item.itemDiscount) :
-                item.itemDiscountType==='Percentage' ? (item.itemDiscount + '%') : ''}}
+                {{item.discountType==='None' ? 'N/A' :
+                item.discountType==='Cash' ? ('LKR '+item.discount) :
+                item.discountType==='Percentage' ? (item.discount + '%') : ''}}
               </p>
             </div>
           </div>
@@ -184,7 +184,7 @@
         <div class="row cols-md-12 mt-3">
           <p class="mb-2 fs-sm text-dark fw-bold">Overview </p>
           <div class="col">
-            <p class="mb-2 fs-sm text-muted">{{item.itemDescription}} </p>
+            <p class="mb-2 fs-sm text-muted">{{item.description}} </p>
           </div>
         </div>
 
