--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-view/item-search-result-view.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-view/item-search-result-view.component.html
@@ -23,7 +23,7 @@
       <div class="position-relative" (click)="getItemSelected(item)" style="margin: 15px 15px 0px 15px">
         <h3 class="h6 fs-base" style="margin-bottom: 0px">
           <a class="nav-link" href="#" data-bs-toggle="offcanvas"
-             data-bs-target="#fi-item-viewer" style="font-weight: bold;padding: 0px">{{item.itemTitle}}</a>
+             data-bs-target="#fi-item-viewer" style="font-weight: bold;padding: 0px">{{item.name}}</a>
         </h3>
         <div class="border-top border-light pt-0 mb-2">
 
@@ -33,23 +33,23 @@
               <div style="border-right: 1px solid #d3d3d3">
                 <p class="mb-1 fs-sm" style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
                   Quantity </p>
-                <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">{{item.itemQty}}</p>
+                <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">{{item.quantity}}</p>
               </div>
             </div>
             <div class="col" style="padding: 0px">
               <p class="mb-2 fs-sm" style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">
                 Discount </p>
               <p class="mb-2 fs-sm text-primary fw-bold" style="text-align: center">
-                {{item.itemDiscountType==='None' ? 'N/A' :
-                item.itemDiscountType==='Cash' ? ('LKR '+item.itemDiscount) :
-                item.itemDiscountType==='Percentage' ? (item.itemDiscount + '%') : ''}}
+                {{item.discountType==='None' ? 'N/A' :
+                item.discountType==='Cash' ? ('LKR '+item.discount) :
+                item.discountType==='Percentage' ? (item.discount + '%') : ''}}
               </p>
             </div>
           </div>
           <div class="fw-bold"><i class="fi-cash mt-n1 me-2 lead align-middle opacity-70"></i>
-            <span *ngIf="item.itemDiscountType==='None'">LKR {{item.itemPrice}}</span>
-            <span *ngIf="item.itemDiscountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.itemPrice}}</span>
-            <span *ngIf="item.itemDiscountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(item)}}</span>
+            <span *ngIf="item.discountType==='None'">LKR {{item.price}}</span>
+            <span *ngIf="item.discountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.price}}</span>
+            <span *ngIf="item.discountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(item)}}</span>
           </div>
         </div>
       </div>
@@ -76,12 +76,12 @@
 
             </div>
           </div>
-          <div style="display: flex">
+          <div style="display: flex" *ngIf="item.orderDetail!==undefined">
             <button style="background-color: #06A773"
                     class="btn btn-icon btn-sm text-primary rounded-circle"
                     type="button" data-bs-toggle="tooltip" title="Add to Cart" (click)="addToCart(item)">
               <i class="fi-cart" style="color: white"></i></button>
-            <div *ngIf="item.orderDetail.quantity>0"
+            <div *ngIf="item.orderDetail!==undefined && item.orderDetail.quantity>0"
                  style="padding: 2px 5px 2px 5px;color: #1b945b;margin-top: 4px;margin-left: 8px;font-weight: bold">
               {{item.orderDetail.quantity}}
             </div>
