--- a/Frontend/src/app/app-customer/view/search-result/shop-cart/shop-cart.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/shop-cart/shop-cart.component.html
@@ -95,7 +95,7 @@
             <div class="card card-body border-none" style="padding: 15px 5px 0px 5px">
               <!--Order detail card 1-->
               <div class="order-detail-card"
-                   style="border-top: 1px solid #c1c1c1;padding: 5px 0px 5px 0px;margin-bottom: 0px"
+                   style="border-top: 1px solid #c1c1c1;padding: 15px 0px 5px 0px;margin-bottom: 0px"
                    [ngStyle]="{'border-top-width':first?'1px':'1px'}"
                    *ngFor="let item of shop.items;let first = first;let last = last;let j=index">
                 <div class="d-flex align-items-center justify-content-between pb-1">
@@ -107,10 +107,13 @@
                     <h3 class="h6 mb-2 fs-base">
                       <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#item-viewer"
                          style="font-weight: bold;padding-left: 10px">
-                        {{item.itemTitle}}
+                        {{item.name}}
                       </a>
                     </h3>
-                    <span class="badge rounded-pill bg-info" style="margin-top: 5px"> Item </span>
+                    <span *ngIf="item.orderDetail.orderDetailType==='Item'" class="badge rounded-pill bg-info"
+                          style="margin-top: 5px"> Item </span>
+                    <span *ngIf="item.orderDetail.orderDetailType==='ItemPackage'" class="badge rounded-pill bg-success"
+                          style="margin-top: 5px"> Package </span>
                   </div>
                   <button type="button" class="btn btn-outline-primary btn-icon btn-xxs"
                           style="margin-top: 3px;border-width: 2px;cursor: pointer" (click)="removeItem(i,'item',j)">
@@ -127,44 +130,52 @@
                       <!--<div class="col-12">-->
                       <!--<div style="background-color: rgba(229,101,2,0.44)">-->
                       <!--<div class="mb-2 fs-sm text-dark fw-bold">Price</div>-->
-                      <!--<div class="fs-sm fw-bold" style="color: #b96802">{{'LKR '+item.itemPrice}}</div>-->
+                      <!--<div class="fs-sm fw-bold" style="color: #b96802">{{'LKR '+item.price}}</div>-->
                       <!--</div>-->
                       <!--</div>-->
                       <!--<div class="col-12" style="margin-top: 10px">-->
                       <!--<div style="background-color: rgba(229,66,5,0.44)">-->
                       <!--<div class="mb-2 fs-sm text-dark fw-bold">Discount</div>-->
-                      <!--<div class="fs-sm fw-bold" style="color: #b94701">{{item.itemPrice}}</div>-->
-                      <!--<span *ngIf="item.itemDiscountType==='None'">LKR {{item.itemPrice}}</span>-->
-                      <!--<span *ngIf="item.itemDiscountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.itemPrice}}</span>-->
-                      <!--<span *ngIf="item.itemDiscountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(item)}}</span>-->
+                      <!--<div class="fs-sm fw-bold" style="color: #b94701">{{item.price}}</div>-->
+                      <!--<span *ngIf="item.discountType==='None'">LKR {{item.price}}</span>-->
+                      <!--<span *ngIf="item.discountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.price}}</span>-->
+                      <!--<span *ngIf="item.discountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(item)}}</span>-->
                       <!--</div>-->
                       <!--</div>-->
                       <!--</div>-->
                       <div class="border-top border-light pt-0 mb-2">
                         <div class="fw-bold" style="font-size: 21px;margin-top: 0px;margin-bottom: 15px">
                           <i class="fi-cash mt-n1 me-2 lead align-middle opacity-70" style="font-size: 30px"></i>
-                          <span *ngIf="item.itemDiscountType==='None'">LKR {{item.itemPrice * item.orderDetail.quantity}}</span>
-                          <span *ngIf="item.itemDiscountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.itemPrice * item.orderDetail.quantity}}</span>
-                          <span *ngIf="item.itemDiscountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(item)}}</span>
+                          <span *ngIf="item.discountType==='None'">LKR {{item.price * item.orderDetail.quantity}}</span>
+                          <span *ngIf="item.discountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.price * item.orderDetail.quantity}}</span>
+                          <span *ngIf="item.discountType!=='None'"
+                                style="margin-left: 10px">LKR {{calcDiscount(item)}}</span>
                         </div>
                         <div class="row cols-sm-2 row-cols-md-12"
                              style="border-top: 1px solid #eaeaea;border-bottom: 1px solid #eaeaea;margin-top: 0px;margin-bottom: 20px;font-size: 15px">
                           <div class="col" style="padding: 0px">
-                            <div style="border-right: 1px solid #d3d3d3">
+                            <div *ngIf="item.quantity!==-1" style="border-right: 1px solid #d3d3d3">
                               <p class="mb-1"
                                  style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
                                 Quantity </p>
                               <p class="mb-2 fw-bold mx-2" style="text-align: center;color: #f29d00">
-                                {{item.itemQty}}</p>
+                                {{item.quantity}}
+                              </p>
+                            </div>
+                            <div *ngIf="item.quantity===-1"
+                                 style="border-right: 1px solid #d3d3d3;display: grid;justify-content: center;align-content: center;height: 100%">
+                              <p class="mb-2 fw-bold mx-2" style="text-align: center;color: #d48f03">
+                                Make On Delivery
+                              </p>
                             </div>
                           </div>
                           <div class="col" style="padding: 0px">
                             <p class="mb-1" style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">
                               Discount </p>
                             <p class="mb-2 text-primary fw-bold" style="text-align: center">
-                              {{item.itemDiscountType==='None' ? 'N/A' :
-                              item.itemDiscountType==='Cash' ? ('LKR '+item.itemDiscount) :
-                              item.itemDiscountType==='Percentage' ? (item.itemDiscount + '%') : ''}}
+                              {{item.discountType==='None' ? 'N/A' :
+                              item.discountType==='Cash' ? ('LKR '+item.discount) :
+                              item.discountType==='Percentage' ? (item.discount + '%') : ''}}
                             </p>
                           </div>
                         </div>
