--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-view/ba-manage-item-view.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-view/ba-manage-item-view.component.html
@@ -46,7 +46,7 @@
 
         <!-- <h4 class="mb-1 fs-xs fw-normal text-uppercase text-primary fw-bold">Not Available</h4> -->
         <h3 class="h6 mb-2 fs-base"><a class="nav-link" href="#" data-bs-toggle="offcanvas"
-                                       data-bs-target="#item-viewer">{{item.itemTitle}}</a></h3>
+                                       data-bs-target="#item-viewer">{{item.name}}</a></h3>
         <!-- <div class="d-flex align-items-center text-nowrap">
           <p class="mb-2 fs-sm text-muted">Quantity </p>
           <p class="mb-2 fs-sm text-primary fw-bold mx-2"> 250g</p>
@@ -84,16 +84,16 @@
           <div class="col" style="padding: 0px">
             <p class="mb-2 fs-sm" style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">Discount </p>
             <p class="mb-2 fs-sm text-primary fw-bold" style="text-align: center">
-              {{item.itemDiscountType==='None' ? 'N/A' :
-              item.itemDiscountType==='Cash' ? ('LKR '+item.itemDiscount) :
-              item.itemDiscountType==='Percentage' ? (item.itemDiscount + '%') : ''}}
+              {{item.discountType==='None' ? 'N/A' :
+              item.discountType==='Cash' ? ('LKR '+item.discount) :
+              item.discountType==='Percentage' ? (item.discount + '%') : ''}}
             </p>
             <!--<p *ngIf="item.itemDiscountType==='None'" class="mb-2 fs-sm text-primary fw-bold">N/A</p>-->
             <!--<p *ngIf="item.itemDiscountType==='Cash'" class="mb-2 fs-sm text-primary fw-bold">{{"LKR " + item.itemDiscount}}</p>-->
             <!--<p *ngIf="item.itemDiscountType==='Percentage'" class="mb-2 fs-sm text-primary fw-bold">{{item.itemDiscount + "%"}}</p>-->
           </div>
         </div>
-        <div class="fw-bold"><i class="fi-cash mt-n1 me-2 lead align-middle opacity-70"></i>LKR {{item.itemPrice}}</div>
+        <div class="fw-bold"><i class="fi-cash mt-n1 me-2 lead align-middle opacity-70"></i>LKR {{item.price}}</div>
       </div>
       <div class="card-footer d-flex align-items-center justify-content-center mx-3 pt-3 text-nowrap">
         <div class="form-check form-switch">
