--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item.component.html
@@ -68,7 +68,7 @@
             type="text"
             placeholder="Title"
             required
-            [(ngModel)]="item.itemTitle" #itemTitle="ngModel" name="itemTitle"
+            [(ngModel)]="item.name" #itemTitle="ngModel" name="itemTitle"
           />
           <div *ngIf="(itemTitle.touched || baManageFormItem.submitted) && itemTitle.errors?.required"
                class="validErr">
@@ -118,7 +118,7 @@
           <select
             class="form-select"
             id="validationTooltip03"
-            [(ngModel)]="item.itemDiscountType" #itemDiscountType="ngModel" name="itemDiscountType"
+            [(ngModel)]="item.discountType" #itemDiscountType="ngModel" name="itemDiscountType"
           >
             <option value="None">None</option>
             <option value="Cash">Cash</option>
@@ -129,7 +129,7 @@
             Discount type is required
           </div>
         </div>
-        <div class="col-md-4 mb-3" *ngIf="item.itemDiscountType!=='None'">
+        <div class="col-md-4 mb-3" *ngIf="item.discountType!=='None'">
           <label class="form-label" for="validationTooltip04"
           >Discount</label
           >
@@ -143,7 +143,7 @@
             id="validationTooltip04"
             placeholder="Discount"
             required
-            [(ngModel)]="item.itemDiscount" #itemDiscount="ngModel" name="itemDiscount"
+            [(ngModel)]="item.discount" #itemDiscount="ngModel" name="itemDiscount"
           />
           <div *ngIf="(itemDiscount.touched || baManageFormItem.submitted) && itemDiscount.errors?.required"
                class="validErr">
@@ -170,7 +170,7 @@
           <div class="input-group">
             <span class="input-group-text fs-lg py-1">LKR</span>
             <input type="number" class="form-control" placeholder="Amount"
-                   required [(ngModel)]="item.itemPrice" #itemPrice="ngModel" name="itemPrice">
+                   required [(ngModel)]="item.price" #itemPrice="ngModel" name="itemPrice">
             <!--<span class="input-group-text">.00</span>-->
           </div>
           <div *ngIf="(itemPrice.touched || baManageFormItem.submitted) && itemPrice.errors?.required"
@@ -297,7 +297,7 @@
              aria-label="Small description about your item."><i class="fi-help"></i>
           </a>
           <textarea class="form-control" id="validationTooltip05" rows="5" placeholder="Description"
-                    [(ngModel)]="item.itemDescription" name="itemDescription"></textarea>
+                    [(ngModel)]="item.description" name="itemDescription"></textarea>
           <div class="invalid-tooltip">
             Please fill item discount
           </div>
