--- a/Frontend/src/app/app-shop/view/business-account/business-account.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/business-account.component.html
@@ -24,7 +24,7 @@
                   d-flex d-md-block d-lg-flex
                   align-items-start
                   pt-lg-2
-                  mb-4
+                  mb-2
                 "
         >
           <img
@@ -58,6 +58,43 @@
                 >
               </li>
             </ul>
+          </div>
+        </div>
+
+        <div class="row" style="margin-top: 0px;border-top: 1px solid #ededed">
+          <div style="margin-top: 15px;line-height: 2.3;width: 98px;font-weight: bold">
+            Business
+          </div>
+          <div style="margin-top: 15px;padding-left: 0px;width: calc(100% - 98px)">
+            <!--<label class="form-label"-->
+            <!--&gt;Business type </label-->
+            <!--&gt;-->
+            <!--<a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"-->
+            <!--data-bs-toggle="tooltip" title="Select this item belongs to which type of business"-->
+            <!--data-bs-original-title="Select this item belongs to which type of business"-->
+            <!--aria-label="Select this item belongs to which type of business"><i class="fi-help"></i>-->
+            <!--</a>-->
+            <!-- <div class="d-flex flex-column flex-sm-row"> -->
+            <ng-select
+              [items]="businessCategories"
+              bindLabel="name"
+              placeholder="Select Business Type"
+              dropdownPosition="auto"
+              [multiple]="false"
+              [searchWhileComposing]="true"
+              (change)="setBusinessCategory()"
+              [(ngModel)]="businessCategory">
+            </ng-select>
+            <!-- <div class="invalid-tooltip">
+              Please fill item quantity
+            </div>
+            <div class="valid-tooltip">Looks good!</div> -->
+            <!-- <button type="button" class="btn btn-light-primary btn-icon shadow-sm">
+              <i class="fi-plus"></i>
+            </button> -->
+            <!-- <button class="btn btn-translucent-primary rounded-pill" type="button">Add</button> -->
+            <!-- </div> -->
+
           </div>
         </div>
 
