--- a/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-detail-view/item-search-result-detail-view.component.html
+++ b/Frontend/src/app/app-customer/view/search-result/item-package-search-result/item-search-result-detail-view/item-search-result-detail-view.component.html
@@ -158,7 +158,7 @@
             <i class="fi-cash mt-n1 me-2 lead align-middle opacity-70" style="font-size: 30px"></i>
             <span *ngIf="item.discountType==='None'">LKR {{item.price}}</span>
             <span *ngIf="item.discountType!=='None'" style="text-decoration: line-through;color: red">LKR {{item.price}}</span>
-            <span *ngIf="item.discountType!=='None'" style="margin-left: 10px">LKR {{calcDiscount(item)}}</span>
+            <span *ngIf="item.discountType!=='None'" style="margin-left: 10px">LKR {{item.discountedPrice}}</span>
           </div>
           <div class="row cols-sm-2 row-cols-md-12"
                style="border-top: 1px solid #eaeaea;border-bottom: 1px solid #eaeaea;margin-top: 0px;margin-bottom: 20px">
