--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-view/ba-manage-item-view.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-item/ba-manage-item-view/ba-manage-item-view.component.html
@@ -97,12 +97,12 @@
       </div>
       <div class="card-footer d-flex align-items-center justify-content-center mx-3 pt-3 text-nowrap">
         <div class="form-check form-switch">
-          <input class="form-check-input" type="checkbox" [checked]="item.itemAvailable"
+          <input class="form-check-input" type="checkbox" [checked]="item.available"
                  (click)="setItemAvailable(item)">
-          <label *ngIf="!item.itemAvailable"
+          <label *ngIf="!item.available"
                  class="form-check-label fs-xs fw-normal text-uppercase text-primary fw-bold">
             Not Available</label>
-          <label *ngIf="item.itemAvailable" class="form-check-label fs-xs fw-normal text-uppercase text-green fw-bold">
+          <label *ngIf="item.available" class="form-check-label fs-xs fw-normal text-uppercase text-green fw-bold">
             Available</label>
         </div>
         <!--<div class="form-check form-switch" *ngIf="item.itemAvailable">-->
