--- a/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-manage/ba-manage-package/ba-manage-package.component.html
@@ -404,39 +404,39 @@
   </div>
 </div>
 
-<div class="row" style="margin-top: 30px">
-  <div class="col-md-12 mb-3">
-    <!--<label class="form-label"-->
-    <!--&gt;Business type </label-->
-    <!--&gt;-->
-    <!--<a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"-->
-    <!--data-bs-toggle="tooltip" title="Select this item belongs to which type of business"-->
-    <!--data-bs-original-title="Select this item belongs to which type of business"-->
-    <!--aria-label="Select this item belongs to which type of business"><i class="fi-help"></i>-->
-    <!--</a>-->
-    <!-- <div class="d-flex flex-column flex-sm-row"> -->
-    <ng-select
-      [items]="businessCategories"
-      bindLabel="name"
-      placeholder="Select Business Type"
-      dropdownPosition="auto"
-      [multiple]="false"
-      [searchWhileComposing]="true"
-      (change)="getItemPackagesOrdered()"
-      [(ngModel)]="businessProfileCategory">
-    </ng-select>
-    <!-- <div class="invalid-tooltip">
-      Please fill item quantity
-    </div>
-    <div class="valid-tooltip">Looks good!</div> -->
-    <!-- <button type="button" class="btn btn-light-primary btn-icon shadow-sm">
-      <i class="fi-plus"></i>
-    </button> -->
-    <!-- <button class="btn btn-translucent-primary rounded-pill" type="button">Add</button> -->
-    <!-- </div> -->
+<!--<div class="row" style="margin-top: 30px">-->
+  <!--<div class="col-md-12 mb-3">-->
+    <!--&lt;!&ndash;<label class="form-label"&ndash;&gt;-->
+    <!--&lt;!&ndash;&gt;Business type </label&ndash;&gt;-->
+    <!--&lt;!&ndash;&gt;&ndash;&gt;-->
+    <!--&lt;!&ndash;<a class="btn btn-icon btn-light btn-xs text-primary content-overlay mb-2 ms-auto help"&ndash;&gt;-->
+    <!--&lt;!&ndash;data-bs-toggle="tooltip" title="Select this item belongs to which type of business"&ndash;&gt;-->
+    <!--&lt;!&ndash;data-bs-original-title="Select this item belongs to which type of business"&ndash;&gt;-->
+    <!--&lt;!&ndash;aria-label="Select this item belongs to which type of business"><i class="fi-help"></i>&ndash;&gt;-->
+    <!--&lt;!&ndash;</a>&ndash;&gt;-->
+    <!--&lt;!&ndash; <div class="d-flex flex-column flex-sm-row"> &ndash;&gt;-->
+    <!--<ng-select-->
+      <!--[items]="businessCategories"-->
+      <!--bindLabel="name"-->
+      <!--placeholder="Select Business Type"-->
+      <!--dropdownPosition="auto"-->
+      <!--[multiple]="false"-->
+      <!--[searchWhileComposing]="true"-->
+      <!--(change)="getItemPackagesOrdered()"-->
+      <!--[(ngModel)]="businessProfileCategory">-->
+    <!--</ng-select>-->
+    <!--&lt;!&ndash; <div class="invalid-tooltip">-->
+      <!--Please fill item quantity-->
+    <!--</div>-->
+    <!--<div class="valid-tooltip">Looks good!</div> &ndash;&gt;-->
+    <!--&lt;!&ndash; <button type="button" class="btn btn-light-primary btn-icon shadow-sm">-->
+      <!--<i class="fi-plus"></i>-->
+    <!--</button> &ndash;&gt;-->
+    <!--&lt;!&ndash; <button class="btn btn-translucent-primary rounded-pill" type="button">Add</button> &ndash;&gt;-->
+    <!--&lt;!&ndash; </div> &ndash;&gt;-->
 
-  </div>
-</div>
+  <!--</div>-->
+<!--</div>-->
 
 <div class="modal fade" role="dialog" id="new-packageFeature" tabindex="-1" aria-hidden="true" style="z-index: 9999">
   <div class="modal-dialog" role="document">
