--- a/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order.component.html
+++ b/Frontend/src/app/app-shop/view/business-account/ba-order/ba-order.component.html
@@ -93,7 +93,8 @@
       </div>
     </div>
     <div class="row g-4 py-1">
-      <div class="col-md-6">
+
+      <div class="col-md-6" *ngFor="let itemOrder of itemOrders">
         <div class="card mb-2" style="border: 2px solid #e7e7e7">
           <blockquote class="blockquote pending-card-micon card-body">
             <div class="d-flex justify-content-between mb-2">
@@ -115,14 +116,14 @@
                 <div class="col-4">
                   <div style="background-color: rgba(229,154,3,0.35)">
                     <div class="mb-2 fs-sm fw-bold" style="color: #704900">Quantity</div>
-                    <div class="fs-sm fw-bold" style="color: #925f00">3</div>
+                    <div class="fs-sm fw-bold" style="color: #925f00">{{itemOrder.orderDetails.length}}</div>
                   </div>
                 </div>
 
                 <div class="col-6">
                   <div style="background-color: rgba(229,101,2,0.35)">
                     <div class="mb-2 fs-sm fw-bold" style="color: #703f02">Total Price</div>
-                    <div class="fs-sm fw-bold" style="color: #945302">{{'LKR ' + 2}}</div>
+                    <div class="fs-sm fw-bold" style="color: #945302">{{'LKR ' + itemOrder.amount}}</div>
                   </div>
                 </div>
                 <div class="col-2" style="display: grid;align-content: center;justify-content: center">
@@ -137,103 +138,90 @@
               </div>
             </div>
             <div class="collapse mb-3" id="item-list">
-              <div class="card card-body">
+              <div class="card card-body" style="border: 3px solid #e9ad2d">
                 <!--Order detail card 1-->
-                <div class="order-detail-card mb-3 border-bottom">
+                <div class="order-detail-card mb-3" style="margin-top: 5px"
+                     [ngStyle]="{'border-bottom': !last?'3px solid #177f4e':''}"
+                     *ngFor="let orderDetail of itemOrder.orderDetails;let last = last">
                   <div class="d-flex align-items-center justify-content-between pb-1">
-                    <h3 class="h6 mb-2 fs-base">
-                      <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#item-viewer">Item
-                        Name</a></h3>
-                    <span class="badge rounded-pill bg-info"> Item </span>
+                    <h3 class="h6 fs-base" style="margin-bottom: 0px">
+                      <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#item-viewer">
+                        {{orderDetail.orderDetailType==='Item'?orderDetail.item.name:orderDetail.orderDetailType==='ItemPackage'?orderDetail.itemPackage.name:''}}
+                      </a></h3>
+                    <span *ngIf="orderDetail.orderDetailType==='Item'" class="badge rounded-pill bg-info"> Item </span>
+                    <span *ngIf="orderDetail.orderDetailType==='ItemPackage'" class="badge rounded-pill bg-success"> Package </span>
                   </div>
-                  <div class="order-detail-card-ss mb-3">
-                    <div class="list-group list-group-horizontal-sm">
-                      <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                         title="Quantity" data-bs-original-title="Quantity" aria-label="Quantity">
-                        <div class="bg-dark rounded text-center p-2">
-                          <i class="fi-archive d-block h5 text-light mb-0 mx-center"></i>
-                          <span class="fs-xs h4 text-light">2</span>
-                        </div>
-                      </a>
-                      <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                         title="Discount" data-bs-original-title="Discount" aria-label="Discount">
-                        <div class="bg-dark rounded text-center p-2">
-                          <i class="fi-precentage d-block h5 text-light mb-0 mx-center"></i>
-                          <span class="fs-xs h4 text-light">LKR 20</span>
-                        </div>
-                      </a>
-                      <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                         title="Price" data-bs-original-title="Price" aria-label="Price">
-                        <div class="bg-dark rounded text-center p-2">
-                          <i class="fi-cash d-block h5 text-light mb-0 mx-center"></i>
-                          <span class="fs-xs h4 text-light">LKR 500</span>
-                        </div>
-                      </a>
+                  <div class="row cols-sm-2 row-cols-md-12"
+                       style="border-top: 1px solid #eaeaea;border-bottom: 1px solid #eaeaea;margin-top: 10px;margin-bottom: 10px">
+                    <div class="col" style="padding: 0px">
+                      <div style="border-right: 1px solid #d3d3d3">
+                        <p class="mb-1 fs-sm"
+                           style="margin-top: 7px;color: #d48f03;font-weight: bold;text-align: center">
+                          Quantity </p>
+                        <p class="mb-2 fs-sm fw-bold mx-2" style="text-align: center;color: #f29d00">
+                          {{orderDetail.quantity}}</p>
+                      </div>
+                    </div>
+                    <div class="col" style="padding: 0px">
+                      <p class="mb-2 fs-sm" style="margin-top: 7px;color: #b94701;font-weight: bold;text-align: center">
+                        Total Price </p>
+                      <p class="mb-2 fs-sm text-primary fw-bold" style="text-align: center">
+                        LKR {{orderDetail.price * orderDetail.quantity}}
+                      </p>
                     </div>
                   </div>
-                  <div class="d-flex align-items-center justify-content-between pb-1">
+                  <!--<div class="order-detail-card-ss mb-3">-->
+                  <!--<div class="list-group list-group-horizontal-sm">-->
+                  <!--<a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"-->
+                  <!--title="Quantity" data-bs-original-title="Quantity" aria-label="Quantity">-->
+                  <!--<div class="bg-dark rounded text-center p-2">-->
+                  <!--<i class="fi-archive d-block h5 text-light mb-0 mx-center"></i>-->
+                  <!--<span class="fs-xs h4 text-light">2</span>-->
+                  <!--</div>-->
+                  <!--</a>-->
+                  <!--<a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"-->
+                  <!--title="Discount" data-bs-original-title="Discount" aria-label="Discount">-->
+                  <!--<div class="bg-dark rounded text-center p-2">-->
+                  <!--<i class="fi-precentage d-block h5 text-light mb-0 mx-center"></i>-->
+                  <!--<span class="fs-xs h4 text-light">LKR 20</span>-->
+                  <!--</div>-->
+                  <!--</a>-->
+                  <!--<a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"-->
+                  <!--title="Price" data-bs-original-title="Price" aria-label="Price">-->
+                  <!--<div class="bg-dark rounded text-center p-2">-->
+                  <!--<i class="fi-cash d-block h5 text-light mb-0 mx-center"></i>-->
+                  <!--<span class="fs-xs h4 text-light">LKR 500</span>-->
+                  <!--</div>-->
+                  <!--</a>-->
+                  <!--</div>-->
+                  <!--</div>-->
+                  <div class="d-flex align-items-center justify-content-between pb-1"
+                       [ngStyle]="{'margin-bottom': !last?'10px':'0px'}">
                     <span class="fs-md text-primary ms-2"><i class="fi-checkbox-checked-alt"></i></span>
-                    <div class="form-check form-check-dark">
+                    <div class="form-check form-check-dark" style="margin-bottom: 0px">
                       <input class="form-check-input" type="checkbox" id="compare1">
                       <!-- <label class="form-check-label fs-sm" for="compare1">Compare</label> -->
                     </div>
                   </div>
                 </div>
-                <!--Order detail card 2-->
-                <div class="order-detail-card mb-3 border-bottom">
-                  <div class="d-flex align-items-center justify-content-between pb-1">
-                    <h3 class="h6 mb-2 fs-base">
-                      <a class="nav-link" href="#" data-bs-toggle="offcanvas" data-bs-target="#package-viewer">Package
-                        name</a></h3>
-                    <span class="badge rounded-pill bg-success"> Package </span>
-                  </div>
-                  <div class="order-detail-card-ss mb-3">
-                    <div class="list-group list-group-horizontal-sm">
-                      <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                         title="Quantity" data-bs-original-title="Quantity" aria-label="Quantity">
-                        <div class="bg-dark rounded text-center p-2">
-                          <i class="fi-archive d-block h5 text-light mb-0 mx-center"></i>
-                          <span class="fs-xs h4 text-light">1</span>
-                        </div>
-                      </a>
-                      <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                         title="Discount" data-bs-original-title="Discount" aria-label="Discount">
-                        <div class="bg-dark rounded text-center p-2">
-                          <i class="fi-precentage d-block h5 text-light mb-0 mx-center"></i><span
-                          class="fs-xs h4 text-light">LKR 250</span>
-                        </div>
-                      </a>
-                      <a href="#" class="list-group-item list-group-item-action text-center" data-bs-toggle="tooltip"
-                         title="Price" data-bs-original-title="Price" aria-label="Price">
-                        <div class="bg-dark rounded text-center p-2">
-                          <i class="fi-cash d-block h5 text-light mb-0 mx-center"></i>
-                          <span class="fs-xs h4 text-light">LKR 2000</span>
-                        </div>
-                      </a>
-                    </div>
-                  </div>
-                  <div class="d-flex align-items-center justify-content-between pb-1">
-                    <span class="fs-md text-primary ms-2"><i class="fi-checkbox-checked-alt"></i></span>
-                    <div class="form-check form-check-dark">
-                      <input class="form-check-input" type="checkbox" id="compare1">
-                      <!-- <label class="form-check-label fs-sm" for="compare1">Compare</label> -->
-                    </div>
-                  </div>
-                </div>
+
               </div>
             </div>
             <footer class="d-flex justify-content-between">
-              <a href="#" class="btn btn-icon btn-light-primary btnhred btn-xs shadow-sm rounded-circle me-2 mb-2"
+              <a href="#" class="btn btn-icon btn-light-primary btnhred btn-xs rounded-circle me-2 mb-2"
+                 style="border: 2px solid #e7e7e7"
                  data-bs-toggle="tooltip" title="Cancel Order" data-bs-original-title="Cancel Order"
                  aria-label="Cancel Order">
-                <i class="fi-x"></i>
+                <i class="fi-x" style="padding-left: 1.5px;padding-bottom: 1px"></i>
               </a>
-              <a href="#" class="btn btn-icon btn-light-primary btnhgreen btn-xs shadow-sm rounded-circle me-2 mb-2"
+              <a href="#" class="btn btn-icon btn-light-primary btnhgreen btn-xs rounded-circle me-2 mb-2"
+                 style="border: 2px solid #e7e7e7"
                  data-bs-toggle="tooltip" title="Order Completed" data-bs-original-title="Order Completed"
                  aria-label="Order Completed">
                 <i class="fi-check"></i>
               </a>
-              <a href="#" class="btn btn-icon btn-light-primary btnhblue btn-xs shadow-sm rounded-circle me-2 mb-2"
+              <a href="#" class="btn btn-icon btn-light-primary btnhblue btn-xs rounded-circle me-2 mb-2"
+                 style="border: 2px solid #e7e7e7"
                  data-bs-toggle="tooltip" title="Order In Progress" data-bs-original-title="Order In Progress"
                  aria-label="Order In Progress">
                 <i class="fi-arrow-long-right"></i>
@@ -242,6 +230,7 @@
           </blockquote>
         </div>
       </div>
+
     </div>
   </div>
   <!--In Progress Order tab-->
